Section Contact con ajuste

--- a/src/styles/SectionContact.css
+++ b/src/styles/SectionContact.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: bisque;
+    background-color: #F4ECE1;
     height: 100%;
     border-top: 100px;
     border-bottom: 100px;
