--- a/src/styles/Carousel/MainCarousel.css
+++ b/src/styles/Carousel/MainCarousel.css
@@ -8,8 +8,13 @@
     position: relative;
   }
 
-  .preciocarrusel {
-    position: absolute;
+  .textoProducto {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    
   }
 
   .carousel-image {
