--- a/src/styles/Carousel/MainCarousel.css
+++ b/src/styles/Carousel/MainCarousel.css
@@ -14,6 +14,7 @@
     flex-direction: column;
     text-align: center;
     justify-content: center;
+    position: fixed;
     
   }
 
@@ -28,4 +29,12 @@
   
   .side-image {
     width: 5em;
+  }
+
+  .main-text {
+    width: 20em;
+  }
+  
+  .side-text {
+    width: 0em;
   }
