--- a/src/styles/SectionHeader.css
+++ b/src/styles/SectionHeader.css
@@ -12,8 +12,10 @@ header {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    position: fixed;
     background-color: #D89A9A;
-    top: 20px;
+    top: 0px;
+    z-index: 1000;
     overflow: hidden;
     width: 100%;
     padding: 7px;
