--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
-body {
+@font-face {
+  font-family: jerio;
+  src: url(https://www.fontspace.com/jerio-font-f116310);
+}
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Cinzel";
   
 }
   
 
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: jerio;
 }
