--- a/src/styles/SectionIntro.css
+++ b/src/styles/SectionIntro.css
@@ -7,6 +7,7 @@
 }
 
 .imagen-gloria {
+    padding-top: 15%;
     max-height: 80vh;
     text-align: center;
     padding-left: 15%;
@@ -41,7 +42,10 @@
 
 .title {
     padding: 10% 0%;
-    font-size: xx-large;
+    font-size: xxx-large;
+    font-family: "Philosopher", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .text {
