--- a/src/styles/SectionContact.css
+++ b/src/styles/SectionContact.css
@@ -1,10 +1,13 @@
-.contenedorconctact {
+/* .contenedorconctact {
     position: relative;
     display: flex;
+    align-items: center;
     flex-direction: column;
     height: 100%;
     border-top: 100px;
     border-bottom: 100px;
+    margin-top: 4%;
+    margin-bottom: 4%;
 
 }
 
@@ -13,6 +16,7 @@
     font-family: "Philosopher", sans-serif;
     font-weight: 700;
     font-style: normal;
+   
 }
 
 
@@ -23,11 +27,11 @@
     grid-template-columns: 7fr 3fr;
        
     ;
-    height: 80%;
-    padding: 50px 200px;
-    border: 50px;
-}
-
+    height: 100%;
+    padding: 50px 200px; */
+/* border: 50px; */
+/* } */
+/* 
 @media all and (max-width: 480px) {
     .contenedorsectioncontact {
         display: flex;
@@ -75,4 +79,62 @@
     width: 1%;
     height: 1%;
     border-radius: 100%;
+} */
+
+.contenedorconctact {
+    display: grid;
+    
+    grid-template-columns: 1fr 1fr 1fr;
+
+    /* grid-template-rows: 1fr 3fr 1fr 1fr; */
+}
+
+.titlecontact {
+    grid-column-start: 0;
+    grid-column-end: 3;
+    grid-row-start: 0;
+    grid-row-end: 1;
+    text-align: center;
+    padding: 10% 0;
+}
+
+.teesperamos {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 0;
+    grid-column-end: 1;
+
+    text-align: right;
+}
+
+.contenedormapa {
+    /* grid-column-start: 1;
+    grid-column-start: 2; */
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 0;
+    grid-column-end: 2;
+    
+    
+    
+}
+
+.logosydireccion {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+.listalogos {
+
+    list-style: none;
+    color: black;
+}
+
+.imagenlogocontacto {
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-column-start: 2;
+    grid-column-end: 3;
 }
