--- a/src/styles/SectionServices.css
+++ b/src/styles/SectionServices.css
@@ -19,6 +19,10 @@
     font-size: 15px;
 }
 
+.contendorTextoServices li {
+    text-align: justify;
+}
+
 .contenedorCarouselService {
     width: 40%;
     
