--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,11 @@ body {
   min-width: 100%;
   overflow-x : hidden;  
 }
+
+.whatsapp {
+  position: fixed;
+  bottom: 0;
+  right:  0;
+  overflow: auto;
+  
+}
