--- a/src/styles/SectionContact.css
+++ b/src/styles/SectionContact.css
@@ -72,39 +72,45 @@
 .imagenlogocontacto {
     position: relative;
     left: 90%;    
-}
+} */
 
 .marcador {
     border: solid red 4px;
     width: 1%;
     height: 1%;
     border-radius: 100%;
-} */
+} 
 
 .contenedorconctact {
     display: grid;
     
+    
     grid-template-columns: 1fr 1fr 1fr;
-
-    /* grid-template-rows: 1fr 3fr 1fr 1fr; */
+    font-family: "Philosopher", sans-serif;
+    /* grid-template-rows: auto auto  1fr; */ 
 }
 
 .titlecontact {
-    grid-column-start: 0;
-    grid-column-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 4;
     grid-row-start: 0;
     grid-row-end: 1;
     text-align: center;
-    padding: 10% 0;
+    padding: 1% 0;
+    margin-top: 3%;
+    background-color: #D89A9A;
+    font-family: "Philosopher", sans-serif;
 }
 
 .teesperamos {
     grid-row-start: 1;
     grid-row-end: 2;
-    grid-column-start: 0;
-    grid-column-end: 1;
+    grid-column-start: 1;
+    grid-column-end: 2;
+padding-bottom: 4%;
 
-    text-align: right;
+    padding-left: 60%;
+    font-family: "Philosopher", sans-serif;
 }
 
 .contenedormapa {
@@ -112,18 +118,24 @@
     grid-column-start: 2; */
     grid-row-start: 2;
     grid-row-end: 3;
-    grid-column-start: 0;
-    grid-column-end: 2;
-    
-    
-    
+    grid-column-start: 1;
+    grid-column-end: 4;
+    width: 50%;
+    max-height: 7em;
+    padding-left: 20%; 
+     
 }
+
+.contenedormapa:hover {
+    cursor: pointer;   
+} 
 
 .logosydireccion {
     grid-row-start: 2;
     grid-row-end: 3;
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    padding-left: 0%;
 }
 
 .listalogos {
@@ -135,6 +147,19 @@
 .imagenlogocontacto {
     grid-row-start: 3;
     grid-row-end: 4;
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    padding-left: 50%;
+    float: inline-start;
+   height: auto;
+}
+
+.franja {
+    position:sticky ;
+    bottom: 2%,  
+}
+
+.mapa {
+    cursor: pointer;
+
 }
