--- a/src/styles/SectionFooter.css
+++ b/src/styles/SectionFooter.css
@@ -18,6 +18,17 @@
     color: white;
 }
 
+.imagenlogocontacto {
+   
+    
+}
+
+
+.franja {
+    position:sticky ;
+    bottom: 2%,  
+}
+
 /* .FooterContainer {
 display: flex;
 flex-direction: column;
