--- a/src/styles/SectionFooter.css
+++ b/src/styles/SectionFooter.css
@@ -14,6 +14,12 @@
 
 }
 
+
+@media all and (max-width: 680px) {
+    .footerprobe {
+        
+        width: 100vh;}}
+       
 .textfooter {
     color: #F4ECE1;
 }
