--- a/src/styles/SectionFooter.css
+++ b/src/styles/SectionFooter.css
@@ -1,5 +1,4 @@
 .footerprobe {
-    
     display: flex;
     background: #D89A9A;
     bottom: 0;
@@ -11,34 +10,27 @@
     padding-bottom: 1.5%;
     padding-top: 1.5%;
     font-family: "Philosopher", sans-serif;
-
 }
 
-
-@media all and (max-width: 680px) {
-    .footerprobe {
-        
-        width: 100vh;}}
-       
 .textfooter {
     color: #F4ECE1;
 }
 
 .franja {
-    position:sticky ;
-    max-width: 200px; 
+    position: sticky;
+    max-width: 200px;
     max-height: 120px;
 }
 
-/* .FooterContainer {
-display: flex;
-flex-direction: column;
+@media all and (max-width: 768px) {
+    .footerprobe {
+        flex-direction: column;
+        text-align: center;
+        padding: 10px;
+    }
 
-max-width: 1000px;
-bottom: 0;
+    .franja {
+        max-width: 100px;
+        max-height: 60px;
+    }
 }
-
-.Column {
-display: flex;
-flex-direction: column;
-text-align: center;} */
