--- a/src/styles/sectionProducts.css
+++ b/src/styles/sectionProducts.css
@@ -1,12 +1,3 @@
-
-
-/* @media all and (max-width: 640px) {
-    .contenedorsectionproduct {
-        display: flex;
-        flex-direction: column;
-        width: auto;
-    }} */
-
 .productos {
     font-family: "Philosopher", sans-serif;
     font-weight: 700;
@@ -16,56 +7,35 @@
     align-items: center;
     padding-bottom: 2%;
     padding-top: 2%;
+    position: relative; /* Para colocar el círculo detrás */
 }
 
-.contenedorcirculo{
-    /* display: flex;
+.contenedorcirculo {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
     justify-content: center;
-    align-items: center; */
-    position: relative;
-    bottom: 15%;
-    left: 50%;
-    right: 50%;;
-  }
-  
+    align-items: center;
+    z-index: -1; /* Para que el círculo esté detrás del contenido */
+}
+
+.circulo {
+    border: solid 4em #D89A9A;
+    border-radius: 100%;
+    width: 10em;
+    height: 10em;
+    background-color: #D89A9A;
+}
+
+@media all and (max-width: 768px) {
+    .productos {
+        padding-bottom: 5%;
+        padding-top: 5%;
+    }
+
     .circulo {
-        border: solid 4em #D89A9A;
-        border-radius: 100%;
         width: 7em;
         height: 7em;
-
-        position: absolute;
-        background-color: #D89A9A;
-        /* position: relative; */
-        /* bottom: 0px; */
-        
-        right: 42%;
-        top: 220%;
     }
-  
-    .circulo1 {
-        border: solid 0.5em #D89A9A;
-        border-radius: 100%;
-        width: 0.5em;
-        height: 0.5em;
-
-        position: absolute;
-        background-color: #D89A9A;
-        /* position: relative; */
-        /* bottom: 0px; */
-        right: 63%;
-        top: 265%;
-    }
-    .circulo2 {
-        border: solid 0.5em #D89A9A;
-        border-radius: 100%;
-        width: 0.5em;
-        height: 0.5em;
-
-        position: absolute;
-        background-color: #D89A9A;
-        /* position: relative; */
-        /* bottom: 0px; */
-        right: 35%;
-        top: 265%;
-    }
+}
