--- a/src/styles/SectionContact.css
+++ b/src/styles/SectionContact.css
@@ -7,9 +7,11 @@
 .titlecontact {
     grid-column-start: 1;
     grid-column-end: 4;
+
     grid-row-start: 0;
     grid-row-end: 1;
     text-align: center;
+    
     padding: 1% 0;
     margin-top: 2%;
     margin-bottom: 2%;
@@ -21,8 +23,8 @@
     grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 1;
-    grid-column-end: 4;
-    width: 60%;
+    grid-column-end: 3;
+    width: 90%;
     max-height: 7em;
     padding-left: 20%;
     box-sizing: border-box;
@@ -57,15 +59,36 @@
 
 @media all and (max-width: 768px) {
     .contenedorconctact {
-        display: flex;
-        grid-template-columns: 1fr;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
         text-align: center;
     }
 
+    .titlecontact {
+        grid-column-start: 1;
+        grid-column-end: 6;
+    
+        grid-row-start: 0;
+        grid-row-end: 1;
+        text-align: center;
+        
+        padding: 1% 0;
+        margin-top: 2%;
+        margin-bottom: 2%;
+        background-color: #D89A9A;
+        font-family: "Philosopher", sans-serif;
+    }
+
     .contenedormapa {
-        min-width: 30%;
+        min-width: 60%;
         padding-left: 5%;
-        padding-right: 5%;
+       
+        padding-right: 0%;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        grid-column-start: 1;
+        grid-column-end: 5;
+        margin-top: 20px;
     }
 
     .logosydireccion {
@@ -75,15 +98,21 @@
             padding-right: 0%;
             grid-row-start: 3;
             grid-row-end: 4;
-            grid-column-start: 1;
-            grid-column-end: 4;
+            grid-column-start: 4;
+            grid-column-end: 6;
             margin-top: 20px;
+        
+    }
+
+    .elementoslista {
+        padding: 0;
+        float: left;
         
     }
 
     .mapa {
         display: flex;
         height: 100%;
-        width: 100%;
+        width: 70%;
     }
 }
