--- a/src/styles/SectionContact.css
+++ b/src/styles/SectionContact.css
@@ -1,3 +1,10 @@
+.marcador {
+    border: solid red 4px;
+    width: 1%;
+    height: 1%;
+    border-radius: 100%;
+}
+
 .contenedorconctact {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
