Carrusel de servicios con imagenes nuevas - Espacios ajustados

--- a/src/styles/SectionIntro.css
+++ b/src/styles/SectionIntro.css
@@ -7,6 +7,7 @@
 
 .imagen-gloria {
     padding-top: 15%;
+    
     max-height: 80vh;
     text-align: center;
     padding-left: 15%;
@@ -78,8 +79,13 @@
     }
 
     .title {
-        padding: 15% 10%;
+        padding: 5% 10%;
         font-size: x-large;
+    }
+
+    .imagen-gloria {
+        padding-top: 5%;
+        padding-bottom: 5%;
     }
 
     .text {
