--- a/src/styles/SectionServices.css
+++ b/src/styles/SectionServices.css
@@ -31,15 +31,21 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 5%;
+    padding-top: 5%;
 }
 
 @media all and (max-width: 768px) {
     .contenedorSectionServices {
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: 10px;
     }
 
-    .contendorTextoServices, .contenedorCarouselService {
+    .contendorTextoServices {
         width: 90%;
+        padding-top: 5%;
+    }
+    .contenedorCarouselService {
+        width: 90%;
+        padding-bottom: 15%;
     }
 }
