--- a/src/styles/SectionIntro.css
+++ b/src/styles/SectionIntro.css
@@ -55,10 +55,10 @@
 
 .botonintro {
     font-family: "Philosopher", sans-serif;
-    border: solid 5px #B98484;
+    border: solid 5px #D89A9A;
     height: 95px;
     width: 190px;
-    background-color: #B98484;
+    background-color: #D89A9A;
     color: #707070;
     font-size: larger;
     border-radius: 45%;
@@ -78,20 +78,26 @@
     }
 
     .title {
-        padding: 5% 5%;
+        padding-left: 15%;
         font-size: x-large;
+        padding-bottom: 4%;
+        padding-top: 2%;
     }
 
     .text {
         padding-left: 15%;
         padding-right: 15%;
         padding-bottom: 7%;
+        margin-top: 3%;
+        
     }
 
     .botonintro {
         width: 100%;
         margin: 0;
         border-radius: 0;
+        background: #D89A9A;
+        margin-bottom: 5%;
     }
 
     .imagen-gloria {
