--- a/src/styles/SectionHeader.css
+++ b/src/styles/SectionHeader.css
@@ -1,85 +1,105 @@
-/* header {
+/* General styles */
+.header {
     width: 100%;
     position: fixed;
     z-index: 50;
     top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #D89A9A;
+    padding: 10px;
 }
 
-.navbar {
+.logo-container {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    width: 100px;
+    height: 100px;
+    display: block;
+}
+
+.logo.open {
+    width: 80px;
+    height: 80px;
+}
+
+/* Menu styles */
+.menu {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: fixed;
-    background-color: #D89A9A;
-    top: 0px;
-    z-index: 1000;
-    overflow: hidden;
-    width: 100%;
-    padding: 7px;
-    height: 87px;
-    font-size: larger;
-}
-
-.navbar-logo {
-    max-width: 200px;
-    max-height: 120px;
-}
-
-.navbar-menu {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 70%;
+    flex-grow: 1;
 }
 
 .navbar-item {
-    display: block;
     text-decoration: none;
     padding: 0.5rem;
-    margin: 0 0.05rem;
-    border-radius: 0.5rem;
+    margin: 0 0.5rem;
     color: gray;
     font-family: "Philosopher", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
 
-/* Estilos para el menú hamburguesa */
-/* .hamburger {
+.hamburger {
     display: none;
-    flex-direction: column;
     cursor: pointer;
 }
 
-.hamburger span {
+.hamburger .bar {
     height: 3px;
     background: gray;
-    margin: 3px 0;
+    margin: 5px 0;
     width: 25px;
-} */ 
+}
 
-/* @media all and (max-width: 768px) {
-    .navbar {
+.close-btn {
+    display: none;
+}
+
+/* Mobile styles */
+@media all and (max-width: 768px) {
+    .header {
+        flex-direction: row;
         justify-content: space-between;
+        height: 45px;
     }
 
-    .navbar-menu {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        background-color: #D89A9A;
-        position: absolute;
-        top: 87px;
-        left: 0;
-        z-index: 1000;
-    }
-
-    .navbar-menu.active {
-        display: flex;
+    .logo {
+        display: block;
+        width: 80px;
+        height: 80px;
     }
 
     .hamburger {
+        display: block;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 30px;
+        height: 30px;
+        padding-right: 30px;
+        padding-top: 5px;
+    }
+
+    .menu {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        background-color: #D89A9A;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1000;
+        padding-top: 80px;
+    }
+
+    .menu.open {
         display: flex;
     }
 
@@ -88,4 +108,39 @@
         width: 100%;
         text-align: center;
     }
-} */
+
+    .hamburger.hidden {
+        display: none;
+    }
+
+    .close-btn.visible {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        font-size: 32px;
+        color: #fff;
+        cursor: pointer;
+        padding-top: 20px;
+        padding-right: 35px;
+    }
+
+
+    .menu .logo{
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
+
+    .menu a {
+        color: #2B6773;
+        padding: 15px 0;
+        width: 100%;
+        text-align: center;
+        border-top: 1px solid gray;
+    }
+
+    .menu a:first-child {
+        border-top: none;
+    }
+}
