--- a/src/styles/SectionHeader.css
+++ b/src/styles/SectionHeader.css
@@ -51,10 +51,12 @@
 }
 
 .hamburger .bar {
+    display: flex;
     height: 3px;
     background: gray;
-    margin: 5px 0;
-    width: 25px;
+    margin: 10px 10px;
+    width: 50px;
+    align-items: center;
 }
 
 .close-btn {
@@ -66,13 +68,26 @@
     .header {
         flex-direction: row;
         justify-content: space-between;
-        height: 45px;
+        height: 80px;
     }
 
     .logo {
         display: block;
-        width: 80px;
-        height: 80px;
+        width: 100px;
+        min-height: 100px;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
+
+    .navbar-item {
+        text-decoration: none;
+        padding: 0.5rem;
+        margin: 0 0.5rem;
+        color: gray;
+        font-family: "Philosopher", sans-serif;
+        font-weight: 400;
+        font-style: normal;
     }
 
     .hamburger {
@@ -82,8 +97,9 @@
         right: 10px;
         width: 30px;
         height: 30px;
-        padding-right: 30px;
-        padding-top: 5px;
+        padding-right: 80px;
+        padding-top: 15px;
+        
     }
 
     .menu {
@@ -103,11 +119,7 @@
         display: flex;
     }
 
-    .navbar-item {
-        padding: 1rem;
-        width: 100%;
-        text-align: center;
-    }
+ 
 
     .hamburger.hidden {
         display: none;
@@ -125,19 +137,22 @@
         padding-right: 35px;
     }
 
-
-    .menu .logo{
-        position: absolute;
-        top: 20px;
-        left: 20px;
+    .logo-container {
+        width: 0;
+        height: 0;
     }
+  
 
     .menu a {
+        display: flex;
         color: #2B6773;
         padding: 15px 0;
         width: 100%;
+        height: 100px;
         text-align: center;
         border-top: 1px solid gray;
+        align-items: center;
+        justify-content: center;
     }
 
     .menu a:first-child {
