--- a/src/styles/sectionProducts.css
+++ b/src/styles/sectionProducts.css
@@ -7,25 +7,7 @@
     align-items: center;
     padding-bottom: 2%;
     padding-top: 5%;
-    position: relative; /* Para colocar el círculo detrás */
-}
-
-.contenedorcirculo {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: -1; /* Para que el círculo esté detrás del contenido */
-}
-
-.circulo {
-    border: solid 4em #D89A9A;
-    border-radius: 100%;
-    width: 10em;
-    height: 10em;
-    background-color: #D89A9A;
+    position: relative;
 }
 
 @media all and (max-width: 768px) {
