--- a/src/styles/SectionContact.css
+++ b/src/styles/SectionContact.css
@@ -63,13 +63,14 @@
 @media all and (max-width: 768px) {
     .contenedorconctact {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         text-align: center;
+        
     }
 
     .titlecontact {
         grid-column-start: 1;
-        grid-column-end: 6;
+        grid-column-end: 7;
     
         grid-row-start: 0;
         grid-row-end: 1;
@@ -83,14 +84,14 @@
     }
 
     .contenedormapa {
-        min-width: 80%;
-        padding-left: 5%;
-       
+        min-width: 100%;
+        
+       height: 100%;
         padding-right: 0%;
         grid-row-start: 3;
-        grid-row-end: 4;
-        grid-column-start: 0;
-        grid-column-end: 4;
+        grid-row-end: 5;
+        grid-column-start: 1;
+        grid-column-end: 5;
         margin-top: 20px;
       
     }
@@ -99,24 +100,28 @@
         
             display: flex;
             justify-content: center;
-            padding-right: 0%;
+            padding-right: 2%;
             grid-row-start: 3;
             grid-row-end: 4;
-            grid-column-start: 4;
-            grid-column-end: 6;
+            grid-column-start: 6;
+            grid-column-end: 7;
             margin-top: 20px;
+            
+
         
     }
 
     .elementoslista {
         padding: 0;
         float: left;
+        justify-content: center;
+        display: flex;
         
     }
 
     .mapa {
         display: flex;
         height: 100%;
-        width: 70%;
+        width: 100%;
     }
 }
