--- a/src/styles/SectionContact.css
+++ b/src/styles/SectionContact.css
@@ -48,6 +48,22 @@
     grid-column-start: 3;
     grid-column-end: 4;
     padding-left: 0%;
+    display: flex;
+    flex-direction: column; /* Stack items vertically */
+    align-items: flex-start; /* Align items to the start of the column */
+}
+
+.elementoslista {
+    padding: 10px 0; /* Add some padding for spacing */
+    display: flex;
+    align-items: center; /* Center items vertically within each line */
+    font-size: 0.9em; /* Responsive font size */
+}
+
+.elementoslista img {
+    max-width: 30px; /* Set a max width for the logos to ensure they're not too large */
+    height: auto; /* Maintain aspect ratio */
+    margin-right: 10px; /* Space between the image and text */
 }
 
 .mapa {
@@ -71,35 +87,30 @@
     .titlecontact {
         grid-column-start: 1;
         grid-column-end: 6;
-    
         grid-row-start: 0;
         grid-row-end: 1;
         text-align: center;
-        
         padding: 1% 0;
         margin-top: 2%;
         margin-bottom: 2%;
-       
         font-family: "Philosopher", sans-serif;
     }
 
     .contenedormapa {
         min-width: 80%;
         padding-left: 5%;
-       
         padding-right: 0%;
         grid-row-start: 3;
         grid-row-end: 4;
         grid-column-start: 0;
         grid-column-end: 4;
         margin-top: 20px;
-      
     }
 
     .logosydireccion {
-        
             display: flex;
-            justify-content: center;
+            flex-direction: column; /* Ensures vertical stacking */
+            align-items: center; /* Centers items in the middle */
             padding-right: 0%;
             grid-row-start: 3;
             grid-row-end: 4;
@@ -110,9 +121,14 @@
     }
 
     .elementoslista {
-        padding: 0;
-        float: left;
-        
+        padding: 5px 0;
+        font-size: 0.8em; /* Slightly smaller font size for mobile */
+    }
+
+    .elementoslista img {
+        max-width: 20px; /* Smaller logos for mobile */
+        height: auto;
+        margin-right: 5px;
     }
 
     .mapa {
